--- a/src/pages/About/AboutUs.css
+++ b/src/pages/About/AboutUs.css
@@ -6,24 +6,20 @@
 }
 
 /* Gradient Text */
-.text-gradient {
+/* .text-gradient {
   background: linear-gradient(90deg, #8a2be2, #e94057, #f27121);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
+} */
 
 /* Underline */
-.underline {
-  width: 120px;
+.about-underline {
+  width: 200px;
   height: 5px;
-  background: linear-gradient(90deg, #8a2be2, #e94057);
+  background-color: #fff;
   border-radius: 3px;
-  transition: width 0.4s ease;
 }
 
-.underline:hover {
-  width: 160px;
-}
 
 /* Quote Box */
 .quote-box {
@@ -33,7 +29,6 @@
   color: #e4e4e4;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   position: relative;
-  overflow: hidden;
   transition: all 0.3s ease;
 }
 
@@ -120,9 +115,6 @@
     display: none;
   }
 
-  .underline {
-    margin: 0 auto;
-  }
 
   .quote-box {
     margin: 0 auto;
